syntax = "proto3";
package ET;
//option csharp_namespace = "HotFix";

// 错误码
message ErrorPacket
{
	int32 Code = 1;
	string Message = 2;
}
//message Empty {} //注意括号不能写在一行，工具不认。
message EmptyPacket
{
}

// 聊天
message TheMsg
{
	string Name = 1;
	string Content = 2;
}
message TheMsgList
{
	int32 Id = 1;
	repeated string Content = 2;
}

// 登录
message C2S_LoginPacket
{
	string Username = 1;
	string Password = 2;
}
message S2C_LoginResultPacket
{
	int32 Code = 1;
    //string PeerId;
	string Username = 2;
	string Nickname = 3;
}

// 房间
message C2S_CreateRoomPacket
{
	string RoomName = 1; //房间名
	string RoomPwd 	= 2; //房间密码
	int32 LimitNum 	= 3; //玩家数
}
message C2S_JoinRoomPacket
{
	int32 RoomID 	= 1; //房间Id
	string RoomPwd 	= 2; //房间密码
}
message S2C_RoomInfo
{
	RoomInfo Room = 1;
}
//message C2S_GetRoomList {} //传Empty就行
message S2C_GetRoomList
{
	repeated RoomInfo Rooms = 1; //房间列表
}
//message C2S_LeaveRoom {} //传Empty就行
//message S2C_LeaveRoom {}
//房间信息
message RoomInfo
{
	int32 RoomID 				= 1; //房间Id
	string RoomName 			= 2; //房间名
	int32 LimitNum 				= 3; //人数限制
	repeated PlayerInfo Players = 4; //玩家信息
}
//房间内玩家信息
message PlayerInfo
{
	string UserName = 1; //用户名
	string NickName = 2; //昵称
	int32 SeatID 	= 3; //座位号
}

//出牌
message C2S_PlayCard
{
	int32 CardID = 1; //唯一识别号
}
message S2C_PlayCard
{
	int32 CardID = 1; //唯一识别号
	int32 SeatID = 2; //出牌人的座位
}
//发牌
message S2C_Deal
{
	int32 CardID = 1; //唯一识别号
	int32 SeatID = 2; //发给的座位
}
//比赛结果
message S2C_GameResult
{
	
}

