syntax = "proto3";

option csharp_namespace = "HotFix";

message C2S_CreateRoom {
  string name = 1; //房间名
  string pwd = 2;  //房间密码
  int32 num = 3;   //玩家数
}

message S2C_CreateRoom {
  int32 id = 1;    //房间Id
  string name = 2; //房间名
  int32 num = 3;   //玩家数
}